# mondelez_case

./: README.md  doc.txt  pyproject.toml
mondelez_case/: init.ipynb
results/: Case - Mondelez.pptx
src/: Case Analytics_vSolutions.xlsx  df_consolidado.csv  df_consolidado.xlsx
