[tool.poetry]
name = "mondelez-case"
version = "0.1.0"
description = ""
authors = ["= <victorsturnichcapel@gmail.com>"]
readme = "README.md"
packages = [{include = "mondelez_case"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
ipykernel = "^6.29.5"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
